[gd_scene load_steps=4 format=3 uid="uid://ccnlo71607y2a"]

[ext_resource type="Script" uid="uid://cee1deioocrkl" path="res://Components/NoteSpawnerComponent/Scenes/NoteSpawner/note_spawner.gd" id="1_tiwoa"]
[ext_resource type="Script" uid="uid://boyx3pbnq85x3" path="res://Components/NoteSpawnerComponent/Scenes/NoteSpawner/editor_features.gd" id="2_2esj1"]
[ext_resource type="Script" uid="uid://ddv6xlyekomv3" path="res://Components/NoteSpawnerComponent/Scenes/NoteSpawner/note_container.gd" id="3_2esj1"]

[node name="NoteSpawner" type="Node2D"]
script = ExtResource("1_tiwoa")
debugLine = true

[node name="EditorFeatures" type="Node2D" parent="."]
script = ExtResource("2_2esj1")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(0.5, 0.5)

[node name="NoteContainer" type="Node2D" parent="."]
script = ExtResource("3_2esj1")
